Documentation added, attribute renamed to better describe what it is actually doing